# jamarr

./: .dockerignore  .env.example  .gitignore  .tbls.yml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.node-ci  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  backfill_musicbrainz_links.py  backfill_tidal.py  backup.sh  check_images.py  config.yaml  database_schema.md  debug_chance.py  debug_db.py  debug_db_search.py  debug_upnp.py  demo-jwt-auth.sh  dev.sh  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  index.html  inspect_albums.py  inspect_all_tags.py  inspect_db.py  inspect_tags.py  inspect_tags_blue.py  lint.sh  lint_check.sh  mkdocs.yml  outline.md  plan-chromecast.md  (+22 more)
.github/: dependabot.yml
android/: .gitignore  README.md  build.gradle.kts  deploy.sh  gradle.properties  settings.gradle.kts  test.sh
app/: audio_normalization.py  auth.py  auth_tokens.py  charts.py  check_db.py  config.py  db.py  debug_date.py  lastfm.py  lastfm_jobs.py  lastfm_sync_manager.py  logging_conf.py  main.py  models.py  monitoring.py  playlist.py  repair_albums.py  scheduler.py  security.py  test.py  tidal.py  upnp.py
cache/: library.sqlite
contributing/: index.html
docs/: API.md  DATABASE_SCHEMA.md  DEV_MODE.md  android.md  api.md  artwork-audit.md  auth.md  chromecast-phase0-baseline.md  contributing.md  database_schema.md  index.md  outline.md  plan-mobile.md  playlist--spec.md  roadmap.md  scanner.md  scanner_changes.md  scanner_flow.md  scanner_v2_implementaion_plan.md  scanner_v2_spec.md  scanner_v3.md  tui.md
migrations/: 004_playlist_timestamps.sql  006_album_pk_change.sql  008_cleanup_qobuz_links.sql  009_missing_album_cleanup.sql  014_lastfm_integration.sql  021_playlist_performance_indexes.sql  022_recommendation_indexes.sql  023_auth_refresh_session.sql  025_discovery_alltime_indexes.sql  026_index_optimisation.sql  027_user_admin_flag.sql  028_user_favorites.sql  029_renderer_backend.sql  030_cast_renderer_capability.sql  030_chart_match_override.sql  030_track_audio_analysis.sql  031_refresh_session_lineage.sql  031_track_audio_analysis_silence_durations.sql  apply_migrations.py  check_migrations.py
reference/: openapi.json
roadmap/: index.html
scripts/: README.md  add_volume_to_renderer_state.py  album_art.py  apply_migrations.py  backup.sh  chart.py  check_migrations.py  check_spotify_rate_limit.py  clean_artist.py  db-reset.sh  debug-match-logic.py  debug-misses.py  debug_7day.py  debug_all_users.py  debug_dates.py  debug_eddie.py  debug_recs.py  demo-jwt-auth.sh  demo-jwt.sh  demo_jwt_phase1.py  fetch_art.py  fix_art.py  match-lastfm.py  mb_to_qobuz.py  migrate_history_schema.py  migration_v2.sql  migration_v5_playlist_timestamps.sql  (+9 more)
tui/: README.md  STATUS.md  pyproject.toml
tui/jamarr_tui/: __main__.py  cli.py
tui/jamarr_tui/api/: client.py
tui/jamarr_tui/art/: ascii.py  cells.py  kitty.py
tui/jamarr_tui/playback/: controller.py  mpv.py  probe.py
tui/jamarr_tui/screens/: album.py  app.py  artist.py  help.py  home.py  login.py  now_playing.py  playlists.py  queue.py  renderers.py  search.py  track_list.py
tui/jamarr_tui/widgets/: art_panel.py  player_bar.py
tui/tests/: test_art_aspect.py  test_art_panel.py  test_client_auth_refresh.py  test_remote_playback_controller.py
(+482 files in other folders)
