[project]
name = "jamarr"
version = "0.1.0"
description = "Web-Based UPnP Music Controller"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mutagen",
    "async-upnp-client",
    "aiofiles",
    "python-multipart",
    "asyncpg",
    "httpx",
    "beautifulsoup4",
    "pyyaml",
    "rich",
    "argon2-cffi",
    "email-validator",
    "pillow",
    "blake3",
    "aiodns>=3.2.0",
    "pycares>=4.4.0",
    "rapidfuzz",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: long-running matrix/integration tests",
]
filterwarnings = [
    # Ignore harmless pycares event loop cleanup warning
    "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
]
