[project]
name = "jamarr"
version = "0.1.0"
description = "Web-Based UPnP Music Controller"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mutagen",
    "async-upnp-client",
    "aiofiles",
    "python-multipart",
    "asyncpg",
    "httpx",
    "beautifulsoup4",
    "pyyaml",
    "rich",
    "argon2-cffi",
    "email-validator",
    "pillow",
    "blake3",
    "aiodns>=4.0.0",
    "pycares>=5.0.0",
    "rapidfuzz",
    "pylast>=7.0.1",
    "croniter",
    "python-jose[cryptography]",
    "slowapi",
    "pychromecast>=14.0.0",
    "zeroconf>=0.130.0",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: long-running matrix/integration tests",
]
filterwarnings = [
    # Ignore harmless pycares event loop cleanup warning
    "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
    "ignore:.*iscoroutinefunction.*:DeprecationWarning:slowapi\\.extension",
]
